CUI: tabs: fix double border issue, apply border only AFTER tab was successfully clicked, add default button border radius

--- a/src/scss/themes/fylr/components/_tabs.scss
+++ b/src/scss/themes/fylr/components/_tabs.scss
@@ -219,13 +219,14 @@
 						border-bottom: 1px solid $tabs-active-border-color;
 					}
 				}
-
-				&:active,
+				
 				&.cui-active {
 					.cui-button-visual {
 						&::after {
 							border: 1px solid $tabs-active-border-color;
 							border-bottom: 1px solid transparent;
+							border-top-left-radius: $btn-border-radius;
+							border-top-right-radius: $btn-border-radius;
 						}
 					}
 				}
